Tableview in Point View Controller

--- a/Hopeathon/Point/Point.storyboard
+++ b/Hopeathon/Point/Point.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,34 +19,99 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="List of point" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4yi-pQ-bYm">
-                                <rect key="frame" x="16" y="20" width="91" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UF2-lY-AQF">
-                                <rect key="frame" x="16" y="49" width="192" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Menuju ke detail dari Point 1"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jqB-DN-6jO">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="pointcell" rowHeight="102" id="Z0j-OO-eCn" customClass="PointCell" customModule="Hopeathon" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="102"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Z0j-OO-eCn" id="zhe-VF-gej">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="102"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PAc-4x-g6q">
+                                                    <rect key="frame" x="20" y="16" width="335" height="75"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0vf-eb-9zD">
+                                                            <rect key="frame" x="10" y="12.5" width="50" height="50"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="50" id="PBx-i9-1iD"/>
+                                                                <constraint firstAttribute="width" constant="50" id="d7b-CM-sZy"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XJp-si-tRh">
+                                                            <rect key="frame" x="75" y="17.5" width="35" height="16"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                                            <color key="textColor" red="0.14901960780000001" green="0.46112738715277779" blue="0.98431372549999996" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vrI-Tw-V93">
+                                                            <rect key="frame" x="75" y="43.5" width="33" height="16"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                            <color key="textColor" red="0.14901960780000001" green="0.46112738720000002" blue="0.98431372549999996" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wDl-ux-icK">
+                                                            <rect key="frame" x="295" y="22.5" width="30" height="30"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
+                                                            <state key="normal" title="&gt;"/>
+                                                        </button>
+                                                    </subviews>
+                                                    <color key="backgroundColor" red="0.73725490199999999" green="0.87843137250000003" blue="0.99215686270000003" alpha="0.3320044948630137" colorSpace="custom" customColorSpace="displayP3"/>
+                                                    <constraints>
+                                                        <constraint firstItem="wDl-ux-icK" firstAttribute="centerY" secondItem="PAc-4x-g6q" secondAttribute="centerY" id="8SJ-hg-Yfv"/>
+                                                        <constraint firstAttribute="height" constant="75" id="9Nr-6w-NXF"/>
+                                                        <constraint firstItem="0vf-eb-9zD" firstAttribute="leading" secondItem="PAc-4x-g6q" secondAttribute="leading" constant="10" id="9Tt-xe-PH4"/>
+                                                        <constraint firstItem="XJp-si-tRh" firstAttribute="top" secondItem="0vf-eb-9zD" secondAttribute="top" constant="5" id="G6S-2C-BFk"/>
+                                                        <constraint firstItem="vrI-Tw-V93" firstAttribute="leading" secondItem="0vf-eb-9zD" secondAttribute="trailing" constant="15" id="X9W-je-CBV"/>
+                                                        <constraint firstAttribute="trailing" secondItem="wDl-ux-icK" secondAttribute="trailing" constant="10" id="e3m-wY-xGM"/>
+                                                        <constraint firstItem="vrI-Tw-V93" firstAttribute="top" secondItem="XJp-si-tRh" secondAttribute="bottom" constant="10" id="m6d-7w-WVI"/>
+                                                        <constraint firstItem="XJp-si-tRh" firstAttribute="leading" secondItem="0vf-eb-9zD" secondAttribute="trailing" constant="15" id="pvE-LK-Oe5"/>
+                                                        <constraint firstItem="0vf-eb-9zD" firstAttribute="centerY" secondItem="PAc-4x-g6q" secondAttribute="centerY" id="qv1-fb-omi"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="PAc-4x-g6q" firstAttribute="leading" secondItem="zhe-VF-gej" secondAttribute="leadingMargin" constant="5" id="9CL-ZA-xZx"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="PAc-4x-g6q" secondAttribute="bottom" id="DT0-yW-Wbu"/>
+                                                <constraint firstItem="PAc-4x-g6q" firstAttribute="top" secondItem="zhe-VF-gej" secondAttribute="topMargin" constant="5" id="Sgr-k7-556"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="PAc-4x-g6q" secondAttribute="trailing" constant="5" id="re1-B9-dUL"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="button" destination="wDl-ux-icK" id="VDx-VB-1E9"/>
+                                            <outlet property="imgView" destination="0vf-eb-9zD" id="K4b-g3-7j7"/>
+                                            <outlet property="subtitleLabel" destination="vrI-Tw-V93" id="ZPJ-Vf-6AJ"/>
+                                            <outlet property="titleLabel" destination="XJp-si-tRh" id="AvR-9a-dWW"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
-                                    <action selector="btnDetailPointClicked:" destination="NdU-PU-Xrp" eventType="touchUpInside" id="St2-Ag-yxC"/>
+                                    <outlet property="dataSource" destination="NdU-PU-Xrp" id="rVm-Cl-iSY"/>
+                                    <outlet property="delegate" destination="NdU-PU-Xrp" id="MLK-Yf-sek"/>
                                 </connections>
-                            </button>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="jqB-DN-6jO" firstAttribute="trailing" secondItem="CS6-6J-EKF" secondAttribute="trailing" id="68Z-bs-d4N"/>
+                            <constraint firstItem="CS6-6J-EKF" firstAttribute="bottom" secondItem="jqB-DN-6jO" secondAttribute="bottom" id="UKa-Wt-gHX"/>
+                            <constraint firstItem="jqB-DN-6jO" firstAttribute="leading" secondItem="CS6-6J-EKF" secondAttribute="leading" id="UZI-Re-ke0"/>
+                            <constraint firstItem="jqB-DN-6jO" firstAttribute="top" secondItem="CS6-6J-EKF" secondAttribute="top" id="yrQ-pr-ULn"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="CS6-6J-EKF"/>
                     </view>
                     <navigationItem key="navigationItem" id="F1E-Bn-gy3"/>
                     <connections>
+                        <outlet property="tableView" destination="jqB-DN-6jO" id="oL7-nj-e37"/>
                         <segue destination="QnI-rv-Uap" kind="show" identifier="toNewPoint" id="saT-jS-Ctj"/>
                         <segue destination="5SI-oH-ll0" kind="show" identifier="toDetailPoint" id="Jgp-32-iTc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WP9-PV-CZ0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3981.5999999999999" y="483.99014778325125"/>
+            <point key="canvasLocation" x="3981.5999999999999" y="483.50824587706148"/>
         </scene>
         <!--Point Main View Controller-->
         <scene sceneID="d2e-JX-1zZ">
