--- a/Hopeathon/Auth/Base.lproj/Login.storyboard
+++ b/Hopeathon/Auth/Base.lproj/Login.storyboard
@@ -49,8 +49,8 @@
                                     <action selector="btnLoginClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vKY-6t-KQ8"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gM0-Ub-Vbn">
-                                <rect key="frame" x="87" y="88" width="200" height="200"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="line-a" translatesAutoresizingMaskIntoConstraints="NO" id="gM0-Ub-Vbn">
+                                <rect key="frame" x="137" y="166" width="100" height="100"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -76,4 +76,7 @@
             <point key="canvasLocation" x="632" y="37"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="line-a" width="267" height="278"/>
+    </resources>
 </document>
